--- a/lib_code_w/Makefile
+++ b/lib_code_w/Makefile
@@ -28,10 +28,13 @@ clean:
 	$(RM) $(OBJDIR)/* $(BINDIR)/*
 
 test-code-w:
-	@ cd tests $(MAKE) && make run TARGET=test_lib_code_w
+	@ cd tests $(MAKE) && make run TARGET=test_lib_code_w || true
 
 test-code-comp:
-	@ cd tests $(MAKE) && make run TARGET=test_code_comprehension
+	@ cd tests $(MAKE) && make run TARGET=test_code_comprehension || true
+
+compact:
+	@ cd tests $(MAKE) && make run TARGET=compact || true
 
 test:
 	@ cd tests $(MAKE) && make run
